apps/prod/thalamus/middleware-https.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: thalamus
spec:
  redirectScheme:
    scheme: https
    permanent: true
