apps/prod/thalamus/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: thalamus-svc
  namespace: thalamus
  labels:
    app.kubernetes.io/name: thalamus-svc
    app.kubernetes.io/part-of: thalamus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: thalamus
  ports:
    - port: 8080
      targetPort: 8000
      protocol: TCP
