apps/prod/thalamus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thalamus-ingress
  namespace: thalamus
  labels:
    app.kubernetes.io/name: thalamus-ingress
    app.kubernetes.io/part-of: thalamus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: thalamus-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.thalamus.rbx.ia.br
      secretName: thalamus-tls
  rules:
    - host: api.thalamus.rbx.ia.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thalamus-svc
                port:
                  number: 8080
